--- a/predictionform.html
+++ b/predictionform.html
@@ -4,7 +4,7 @@
 	<title>Registration Form</title>
 </head>
 <body style="background-color: royalblue; color: orange; font-size: 20px">
-<a href="index2.html">Return Home</a>
+<a href="index.html">Return Home</a>
 
 <form method="GET">
 	First Name: <input type="text" name="firstname" required="firstname"><br>
